--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ h3 {
 
 /* استایل‌های ورودی‌ها */
 input[type="text"],
-input[type="email"],
+input[type="username"],
 input[type="password"] {
     width: 100%;
     padding: 10px;
